# pykeen

./: .appveyor.yml  .appveyor_on_request.yml  .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.rst  CITATION.bib  CONTRIBUTING.RST  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  Tester.py  doc8.ini  jax-smfsb-review.md  pyproject.toml  requirements-rtd.txt  requirements-rtfd.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  project_team.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  dataset-request.md  feature-request.yml  model.yml  model_request.md  question-or-documentation-request.md  question.yml  sampler_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature_change.md  new_model.md  new_sampler.md
.github/workflows/: auto-cancellation.yml  common.yml  lint.yml  pr_welcome.yml  tests.yml  tests_master.yml  tests_on_comment.yml  tests_on_pr.yml  tests_on_request.yml  tests_windows.yml
benchmarking/: benchmark_dataset_loading.py  benchmark_pipeline.py  benchmark_splitting.py  interactions.py  rwpe.py  split_benchmark.tsv  utils.py
corpora/fb15k/: fb_15k_validation.tsv
corpora/wn18/: wn_18_test.tsv  wn_18_validation.tsv
data/: entities.tsv  relations.tsv  relations.txt
data/trained_model/: relations_to_embeddings.json
data_sets/FB15k/: valid.txt
docs/: Makefile  conf.py
docs/source/: cli.rst  cli_inference.rst  cli_train_and_evaluate.rst  conf.py  first_steps.rst  hpo.rst  hyper_parameter_optimization.rst  index.rst  inference.rst  installation.rst  kg_models.rst  kge_models.rst  models.rst  overview.rst  pipeline.rst  references.rst  run_pkeen.rst  run_pykeen.rst  software_architecture.rst  summarize.rst  train_and_evalaute.rst  train_and_evaluate.rst  training.rst
notebooks/: Early Stopping Robustness Investigation.ipynb  Investigate Remixing Datasets.ipynb  Pipeline Plots Demo.ipynb  README.md  SE.ipynb  Train And Evaluate DistmultLiteralE Based on the Open World Assumption.ipynb  Train ComplexCWA.ipynb  Train ComplexLiteralCWA.ipynb  Train ConvE.ipynb  Train and Evaluate TransH on RDF (.nt).ipynb  Train and evaluate ConvE on RDF.ipynb  Train and evaluate DistMult on RDF.ipynb  Train and evaluate ERMLP on RDF.ipynb  Train and evaluate TransD on RDF.ipynb  Train and evaluate TransR on RDF.ipynb  Train and evaluate UM on RDF.ipynb  Train_Evaluate_ERMLP_OWA.ipynb  Training from NDEx Data in HPO Mode.ipynb  proteochemometrics.py
notebooks/hello_world/: Hello World!.ipynb  hello_world.ipynb
notebooks/hyper_parameter_optimization/: HPO Mode TransE on RDF.ipynb  HPO on ComPath.ipynb
notebooks/learn_from_bel/: Learning from BEL.ipynb  learning_from_bel.ipynb  ras_machine_triples.tsv
notebooks/perform_inference/: Apply Infernce ComPath.ipynb  Apply Infernce.ipynb  Train and Save Model, Afterwards Apply Infernce.ipynb
notebooks/proteochemometrics/: README.md  main.py
notebooks/results_plots/: results_plots.ipynb
notebooks/train_and_evaluate/: Train and Evaluate TransE on RDF.ipynb
notebooks/training_of_kge_models/: Train ConvE on RDF.ipynb  Train RESCAL on RDF.ipynb  Train SE on RDF.ipynb  Train TransD on RDF.ipynb  Train TransE on RDF.ipynb  Train TransH on RDF (.nt).ipynb  Train TransR on RDF.ipynb  Train UM on RDF.ipynb  Training from NDEx Data.ipynb
notebooks/validation_loss/: validation_loss.py
notebooks/visualization/: Embedding_Projector.ipynb
src/corpus_reader/: AbstractReader.py  csqa_filtered_wikidata_reader.py  walking_rdf_and_owl_reader.py  wn18_reader.py
src/deployer/: __init__.py  cli.py  csqa_filtered_wikidata_deployer.py  display_training_outputs.py  hpo_deployer.py  hpo_walking_rdf_and_owl_deployer.py  walking_rdf_and_owl_deployer.py
src/evaluation_methods/: abstract_evaluator.py  hits_at_k_evaluator.py  mean_rank_evaluator.py
src/hyper_parameter_optimizer/: hits_at_k_evaluator.py  random_search_optimizer.py
src/keen/: __init__.py  __main__.py  cli.py  cli_deprecated.py  constants.py  run.py
src/kg_embeddings_model/: conv_e.py  generic_embeddings.py  rot_e.py  trans_d.py  trans_e.py  trans_h.py  trans_r.py
src/poem/: __init__.py  __main__.py  basic_utils.py  cli.py  constants.py  customized_loss_functions.py  dataset_statistics_utils.py  loss_functions.py  losses.py  model_config.py  optimizers.py  pipeline.py  regularizers.py  typing.py  utils.py  version.py
src/pykeen/: __init__.py  __main__.py  cli.py  cli_deprecated.py  cli_utils.py  constants.py  inverse.py  losses.py  moves.py  optimizers.py  pipeline.py  pipeline_plot.py  predict.py  prediction.py  regularizers.py  run.py  tqdmw.py  trackers.py  typing.py  utils.py  utils_docs.py  version.py
src/utilities/: config_utils.py  constants.py  eval_utilities.py  instance_creation_utils.py  pipeline.py  (+3 more)
test_resources/: configuration.json  configuration_hpo.json  example_test.tsv
tests/: __init__.py  base.py  cases.py  constants.py  mocks.py  test_ablation.py  test_baselines.py  test_batch_size_reduction.py  test_checkpoints.py  test_dataset_analysis.py  test_datasets.py  test_deteriorate.py  test_early_stopping.py  test_evaluators.py  test_execution_modes_for_conv_e.py  test_execution_modes_for_distmult.py  test_execution_modes_for_ermlp.py  test_execution_modes_for_rescal.py  test_execution_modes_for_se.py  test_execution_modes_for_trans_d.py  test_execution_modes_for_trans_e.py  test_execution_modes_for_trans_h.py  test_execution_modes_for_trans_r.py  test_execution_modes_for_um.py  test_experiment_integrity.py  test_generation.py  test_handling_of_cuda_exceptions.py  test_hpo.py  test_instances.py  test_interactions.py  test_joint_nodepiece_model.py  test_leakage.py  test_lightning.py  test_loss_functions.py  test_loss_weights.py  test_losses.py  test_model_mode.py  test_models.py  test_multimodal.py  test_ndex_access.py  (+30 more)
tmp/: check_leakage.py  convert.py  expected_ranks.py  load_pretrained.py  playground.py  tester.py
(+1094 files in other folders)
