# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
reverse_relative = true
