##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pykeen
version = attr: src.pykeen.version.VERSION
description = A package for training and evaluating multimodal knowledge graph embeddings
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/pykeen/pykeen
download_url = https://github.com/pykeen/pykeen/releases
project_urls =
    Bug Tracker = https://github.com/pykeen/pykeen/issues

# Author information
author = Mehdi Ali
author_email = mehdi.ali@cs.uni-bonn.de
maintainer = Mehdi Ali
maintainer_email = mehdi.ali@cs.uni-bonn.de

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    Knowledge Graph Embeddings
    Machine Learning
    Data Mining
    Linked Data

[options]
install_requires =
    dataclasses-json
    numpy
    click
    click_default_group
    sklearn
    torch; platform_system != "Windows"
    tqdm
    requests
    optuna>=2.0.0
    pandas>=1.0.0
    tabulate

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
templating =
    jinja2
plotting =
    matplotlib
    seaborn
mlflow =
    mlflow>=1.8.0
wandb =
    wandb
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    texext

[options.entry_points]
console_scripts =
    pykeen = pykeen.cli:main

pykeen.datasets =
    hetionet         = pykeen.datasets.hetionet:Hetionet
    drkg             = pykeen.datasets.drkg:DRKG
    kinships         = pykeen.datasets.kinships:Kinships
    nations          = pykeen.datasets.nations:Nations
    fb15k            = pykeen.datasets.freebase:FB15k
    fb15k237         = pykeen.datasets.freebase:FB15k237
    codexsmall       = pykeen.datasets.codex:CoDExSmall
    codexmedium      = pykeen.datasets.codex:CoDExMedium
    codexlarge       = pykeen.datasets.codex:CoDExLarge
    ogbbiokg         = pykeen.datasets.ogb:OGBBioKG
    ogbwikikg        = pykeen.datasets.ogb:OGBWikiKG
    openbiolink      = pykeen.datasets.openbiolink:OpenBioLink
    openbiolinklq    = pykeen.datasets.openbiolink:OpenBioLinkLQ
    openbiolinkf1    = pykeen.datasets.openbiolink:OpenBioLinkF1
    openbiolinkf2    = pykeen.datasets.openbiolink:OpenBioLinkF2
    umls             = pykeen.datasets.umls:UMLS
    wn18             = pykeen.datasets.wordnet:WN18
    wn18rr           = pykeen.datasets.wordnet:WN18RR
    yago310          = pykeen.datasets.yago:YAGO310

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pykeen
omit =
    tests/*
    docs/*
    src/pykeen/cli/*
    src/pykeen/__main__.py

[coverage:paths]
source =
    src/pykeen
    .tox/*/lib/python*/site-packages/pykeen

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style=sphinx
strictness=short
