##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pykeen
version = attr: src.pykeen.version.VERSION
description = A package for training and evaluating multimodal knowledge graph embeddings
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/pykeen/pykeen
download_url = https://github.com/pykeen/pykeen/releases
project_urls =
    Bug Tracker = https://github.com/pykeen/pykeen/issues
    Documentation = https://pykeen.readthedocs.io
    Homepage = https://pykeen.github.io

# Author information
author = "Mehdi Ali, Max Berrendorf, Charles Tapley Hoyt, Laurent Vermue"
author_email = pykeen2019@gmail.com
maintainer = "Mehdi Ali, Max Berrendorf, Charles Tapley Hoyt, Laurent Vermue"
maintainer_email = pykeen2019@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    Knowledge Graph Embeddings
    Machine Learning
    Data Mining
    Linked Data

[options]
install_requires =
    dataclasses-json
    numpy
    scipy>=1.7.0
    click
    click_default_group
    scikit-learn
    torch>=2.0
    tqdm
    requests
    optuna>=2.0.0
    pandas>=1.0.0
    tabulate
    more_click
    more_itertools
    pystow>=0.4.3
    docdata
    class_resolver>=0.3.10
    pyyaml
    rexmex>=0.1.3
    torch_max_mem>=0.0.4
    torch-ppr>=0.0.7
    protobuf<4.0.0
    typing_extensions

zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
templating =
    jinja2
plotting =
    matplotlib
    seaborn
wordcloud =
     wordcloud
     IPython
opt_einsum =
    opt_einsum
mlflow =
    mlflow>=1.8.0
ogb =
    ogb>=1.3.4
wandb =
    wandb
neptune =
    neptune-client
tensorboard =
    tensorboard
transformers =
    transformers
lightning =
    # cf. https://github.com/Lightning-AI/lightning/pull/14117
    pytorch_lightning>=1.7.2
biomedicine =
    bioregistry
    pyobo>=0.8.7
tests =
    unittest-templates>=0.0.5
    coverage
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints<=1.13.1
    sphinx_automodapi
    texext

[options.entry_points]
console_scripts =
    pykeen = pykeen.cli:main

# You can add your own datasets with the following entrypoint
# pykeen.datasets =
#    hetionet         = pykeen.datasets.hetionet:Hetionet

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120
ignore =
    D000

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pykeen
omit =
    tests/*
    docs/*
    src/pykeen/cli/*
    src/pykeen/__main__.py

[coverage:paths]
source =
    src/pykeen
    .tox/*/lib/python*/site-packages/pykeen

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

########################
# Pytest Configuration #
# (pytest.ini)         #
########################
[tool:pytest]
addopts = --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
